test/good/nullables/op08.px

a: [Char?] = [null]

func f(): [Char?] def
    print a
    return a

f()[0] ??= 'a'
f()[0] ??= 'b'
print a[0]
