test/bad/functions/return3.px

func f() def
    return 'r'

func main() Int def
    return 0
